--- a/style.css
+++ b/style.css
@@ -44,13 +44,13 @@
 /* GLOBAL STYLES (mobile first/small) */
 
 
-/*
-Breakpoints based on the mockups
-    Global style- small
-    Medium- min-width: 600px
-    Large- min-width: 900px
-    XL- min-width: 1200px
-*/
+        /* NOTE from assignment!!
+            Breakpoints based on the mockups
+                Global style- small
+                Medium- min-width: 600px
+                Large- min-width: 900px
+                XL- min-width: 1200px
+        */
 
 
 /* MEDIA QUERY (medium) */
