Added nav styles

--- a/style.css
+++ b/style.css
@@ -37,6 +37,24 @@
         color: #1F2A44;
     }
 
+        nav ul {
+            list-style-type: none;
+            padding: 10px 0;
+        }
+
+        nav li {
+            padding: 10px 0;
+        }
+
+        nav li a {
+            padding: 10px 20px;
+            text-align: center;
+        }
+
+        nav li a:hover {
+            background-color: #2B2B2B;
+        }
+
     /*----------MAIN----------*/
     main {
         background-color: #F8F4EC;
@@ -47,17 +65,17 @@
         background-color: #1F2A44;
     }
 
-    .footer-address {
-        color: #FAF9F6;
-    }
+        .footer-address {
+            color: #FAF9F6;
+        }
 
-    .footer-address a {
-        color: #E5C185;
-    }
+        .footer-address a {
+            color: #E5C185;
+        }
 
-    .footer-social {
-        color: #E5C185;
-    }
+        .footer-social {
+            color: #E5C185;
+        }
 
 
 /* ROOT VARIABLES */
