--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
         max-width: 1200px;
         margin: 0 auto;
         text-align: center;
+        align-items: center;
         font: var(--font);
     }
 
