--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
         background-color: #E5C185;
         color: #1F2A44;
         text-decoration: none;
+        font-size: larger;
     }
 
         nav ul {
