--- a/style.css
+++ b/style.css
@@ -123,15 +123,27 @@
 
 /* MEDIA QUERY (medium) */
 @media screen and (min-width: 600px){
-
+    .page {
+        max-width: 100%;
+        padding: 0;
+        text-align: center;
+    }
 }
 
 /* MEDIA QUERY (large) */
 @media screen and (min-width: 900px){
-
+    .page {
+        max-width: 100%;
+        padding: 0;
+        text-align: center;
+    }
 }
 
 /* MEDIA QUERY (xl) */
 @media screen and (min-width: 1200px){
-
+    .page {
+        max-width: 100%;
+        padding: 0;
+        text-align: center;
+    }
 }
