--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
     }
 
         nav ul {
+            display: flex;
             list-style-type: none;
             padding: 10px 0;
         }
