working on header

--- a/style.css
+++ b/style.css
@@ -38,10 +38,16 @@
         align-items: center;
     }
 
-    h1 {
-        font-size: xx-large;
-        padding: 10px;
-    }
+        h1 {
+            font-size: xx-large;
+            padding: 10px;
+        }
+
+        header p {
+            font-size: x-large;
+            font-style: italic;
+            padding: 10px;
+        }
 
     /*----------NAV----------*/
     nav {
