--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@
         align-items: center;
     }
 
-        h1 {
+        header h1 {
             font-size: xx-large;
             padding: 10px;
         }
 
         header p {
-            font-size: x-large;
+            font-size: larger;
             font-style: italic;
             padding: 10px;
         }
@@ -53,7 +53,6 @@
     nav {
         background-color: #E5C185;
         color: #1F2A44;
-        font-size: larger;
     }
 
         nav ul {
@@ -71,6 +70,7 @@
         nav li a {
             padding: 10px 20px;
             text-align: center;
+            font-size: larger;
         }
 
         nav li a:hover {
