--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     }
 
         header h1 {
-            font-size: xx-large;
+            font-size: 50px;
             padding: 10px;
         }
 
@@ -60,6 +60,7 @@
             justify-content: center;
             list-style-type: none;
             text-decoration: none;
+            font-size: larger;
             padding: 10px 0;
         }
 
@@ -70,7 +71,6 @@
         nav li a {
             padding: 10px 20px;
             text-align: center;
-            font-size: larger;
         }
 
         nav li a:hover {
