--- a/style.css
+++ b/style.css
@@ -39,13 +39,18 @@
         padding: 10px;
     }
 
+        header image {
+            margin: 0;
+            padding: 10px;
+        }
+
         header h1 {
-            font-size: 50px;
+            font-size: 100px;
             padding: 10px;
         }
 
         header p {
-            font-size: larger;
+            font-size: 30px;
             font-style: italic;
             padding: 10px;
         }
@@ -54,6 +59,7 @@
     nav {
         background-color: #E5C185;
         color: #1F2A44;
+        font-size: 30px;
     }
 
         nav ul {
@@ -61,7 +67,6 @@
             justify-content: center;
             list-style-type: none;
             text-decoration: none;
-            font-size: larger;
             padding: 10px 0;
         }
 
