--- a/style.css
+++ b/style.css
@@ -43,12 +43,12 @@
         header img {
             margin: 0;
             padding: 10px;
-            width: 50%;
-            height: auto;
+            width: auto;
+            height: 50%;
         }
 
         header h1 {
-            font-size: 60px;
+            font-size: 65px;
             padding: 10px;
         }
 
