--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     .page {
         max-width: 1200px;
         margin: 0 auto;
-        font: var(--font);
+        font-family: var(--font-main);
     }
 
     body {
@@ -37,7 +37,6 @@
         margin: 0;
         align-items: center;
         padding: 15px;
-        font: var(--font);
     }
 
         header img {
@@ -122,7 +121,7 @@
     --soft-white: #FAF9F6;              /*I used this soft white for background*/
 
     /*FONTS*/
-    --font: Playfair Display;
+    --font-main: 'Playfair Display', serif;
 }
 
 
