--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     body {
         text-align: center;
         align-items: center;
+        font-family: var(--font-main);
     }
 
     /*----------HEADER----------*/
