--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
 
         .footer-address {
             color: #F8F4EC;
+            padding: 15px 0;
         }
 
         .footer-address a {
@@ -110,6 +111,7 @@
         .footer-social a {
             color: #E5C185;
             text-decoration: none;
+            padding: 15px 0;
         }
 
 
