--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@
             grid-template-columns: repeat (3, 1fr);
             justify-content: center;
             list-style: none;
+            width: 100%;
         }
 
         nav li {
