--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@
             justify-content: center;
             list-style: none;
             width: 100%;
+            padding: 0;
+            margin: 0;
+            gap: 30px;
         }
 
         nav li {
@@ -77,6 +80,7 @@
         }
 
         nav a {
+            display: block;
             padding: 10px 50px;
             text-align: center;
             color: #1F2A44;
