--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
             margin: 0;
             padding: 10px;
             width: auto;
-            height: 50%;
+            height: 25%;
         }
 
         header h1 {
@@ -66,8 +66,7 @@
 
         nav ul {
             display: grid;
-            grid-template-columns: repeat (3, 1fr);
-            justify-content: center;
+            grid-template-columns: 1fr;
             list-style: none;
             width: 100%;
             padding: 0;
@@ -75,17 +74,13 @@
             gap: 30px;
         }
 
-        nav li {
-            padding: 10px 0;
-        }
-
-        nav a {
+        nav li a {
             display: block;
-            padding: 10px 50px;
+            padding: 10px 0;
             text-align: center;
             color: #1F2A44;
             text-decoration: none;
-            font-weight: bolder;
+            font-weight: 200;
         }
 
     /*----------MAIN----------*/
@@ -101,11 +96,12 @@
     /*----------FOOTER----------*/
     footer {
         background-color: #1F2A44;
+        margin: 0;
     }
 
         .footer-address {
             color: #F8F4EC;
-            padding: 15px 0;
+            padding: 30px 0;
         }
 
         .footer-address a {
@@ -118,7 +114,7 @@
             color: #E5C185;
             text-decoration: none;
             font-weight: bold;
-            padding: 15px 0;
+            padding: 30px 0;
         }
 
 
