--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@
         .footer-address {
             color: #F8F4EC;
             padding: 30px 0;
+            margin: 0;
         }
 
         .footer-address a {
@@ -115,6 +116,7 @@
             text-decoration: none;
             font-weight: bold;
             padding: 30px 0;
+            margin: 0;
         }
 
 
