--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
             list-style: none;
             width: 100%;
             padding: 0;
-            margin: 0;
+            margin: 0 auto;
             gap: 30px;
         }
 
