--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
         }
 
         header p {
-            font-size: 25px;
+            font-size: 20px;
             font-style: italic;
             padding: 10px;
         }
@@ -101,6 +101,7 @@
     footer {
         background-color: #1F2A44;
         margin: 0;
+        padding: 30px 0;
     }
 
         .footer-address {
