--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
             display: block;
             margin: 0 auto;
             padding: 10px;
-            width: 50%;
+            width: 200px;
             height: auto;
         }
 
