--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@
         background-color: #FAF9F6;
         margin: 0;
         padding: 50px;
-        max-width: 900px;
+        max-width: 950px;
+        align-items: center;
     }
 
     h2 {
