--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@
             margin: 0 auto;
             width: 100%;
             text-align: left;
+            padding: 20px;
         }
 
         #Offerings {
