--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@
     }
 
         #About-Us {
+            align-items: center;
             border: none;
             border-bottom: #E5C185 solid 1px;
             margin: 0 auto;
