--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@
             border: none;
             border-bottom: #E5C185 solid 1px;
             margin: 0 auto;
+            padding: 20px 0;
             width: 100%;
             text-align: left;
         }
@@ -138,8 +139,9 @@
                 padding: 20px;
                 width: 100%;
                 max-width: 950px;
-                margin: 0 auto;
+                margin: 20px;
                 border-radius: 10px;
+                box-shadow: 0 5px 6px #2B2B2B;
             }
 
         #Gallery a {
