--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@
                 max-width: 950px;
                 margin: 20px;
                 border-radius: 10px;
-                box-shadow: 0 5px 6px #2B2B2B;
+                box-shadow: 0 5px 6px #F8F4EC;
             }
 
             #Gallery a {
