--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@
                 color: #F8F4EC;
                 background-color: #76885B;
                 text-decoration: none;
-                size: 18px;
+                font-size: 18px;
                 display: block;
                 text-align: center;
                 padding: 20px 30px;
