--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@
                 color: #F8F4EC;
                 text-align: left;
                 display: block;
-                padding: 20px;
+                padding: 20px 0;
                 width: 100%;
                 max-width: 950px;
                 margin: 20px;
