--- a/style.css
+++ b/style.css
@@ -119,6 +119,10 @@
             padding: 20px;
         }
 
+        #Offerings {
+            display: block;
+        }
+
             #Offerings h2 {
                 color: #2B2B2B
             }
