--- a/style.css
+++ b/style.css
@@ -132,11 +132,24 @@
                 color: #F8F4EC;
                 text-align: left;
                 display: block;
-                padding: 20px 20px;
+                padding: 20px;
                 width: 100%;
                 margin: 0;
                 border-radius: 10px;
                 box-shadow: 0 5px 6px #76885B;
+            }
+
+        #Gallery {
+            display: block;
+        }
+
+            .tomatoes, .olive-oil, .table-setting, .chef-plating, .basket {
+                background-color: #F8F4EC;
+                padding: 20px;
+                text-align: center;
+                margin: 0;
+                border-radius: 10px;
+                box-shadow: 0 5px 6px #E5C185;
             }
 
             #Gallery a {
