--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@
                 display: block;
                 padding: 20px;
                 width: 100%;
-                margin: 0;
+                margin: 20px;
                 border-radius: 10px;
                 box-shadow: 0 5px 6px #76885B;
             }
