--- a/style.css
+++ b/style.css
@@ -139,6 +139,10 @@
                 box-shadow: 0 5px 6px #76885B;
             }
 
+            .The-Field-Feast-Monthly-Basket ul {
+                padding-left: 10px;
+            }
+
         #Gallery {
             display: block;
         }
