--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@
             }
 
             .The-Field-Feast-Monthly-Basket ul {
-                padding-left: 10px;
+                padding-left: 20px;
             }
 
         #Gallery {
@@ -153,7 +153,7 @@
                 text-align: center;
                 margin: 0;
                 border-radius: 10px;
-                box-shadow: 0 5px 6px #E5C185;
+                box-shadow: 0 5px 6px #2B2B2B;
             }
 
             #Gallery a {
