--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@
 
             #Gallery a {
                 color: #F8F4EC;
-                background-color: #76885B;
+                background-color: #2B2B2B;
                 text-decoration: none;
                 font-size: 18px;
                 display: block;
