--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@
                 display: block;
                 padding: 20px;
                 width: 100%;
-                margin: 20px;
+                margin: 20px 0;
                 border-radius: 10px;
                 box-shadow: 0 5px 4px #76885B;
             }
