--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@
             border-bottom: #E5C185 solid 1px;
             margin: 0 auto;
             width: 100%;
+            max-width: 950px;
             text-align: left;
             padding: 20px;
         }
