--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     /*----------MAIN----------*/
     main {
         margin: 0 auto;
-        padding: 50px;
+        padding: 50px 0;
         max-width: 950px;
         align-items: center;
     }
@@ -109,11 +109,8 @@
     }
 
         #About-Us, #Offerings, #Gallery {
-            align-items: center;
             border: none;
             border-bottom: #E5C185 solid 1px;
-            margin: 0 auto;
-            max-width: 950px;
             text-align: left;
             padding: 20px;
         }
