--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@
                 text-align: center;
                 margin: 0;
                 border-radius: 10px;
-                box-shadow: 0 5px 4px #2B2B2B;
+                box-shadow: 0 5px 4px #76885B;
                 font-style: italic;
                 display: grid;
                 grid-template-rows: 1fr auto;
