--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     /*----------MAIN----------*/
     main {
         margin: 0 auto;
-        padding: 50px 0;
+        padding: 50px;
         max-width: 900px;
         align-items: center;
     }
