--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@
 
             .tomatoes, .olive-oil, .table-setting, .chef-plating, .basket {
                 background-color: #F8F4EC;
-                padding: 20px;
+                padding: 0;
                 text-align: center;
                 margin: 0;
                 border-radius: 10px;
