--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@
                 display: block;
                 width: 100%;
                 height: auto;
+                border-radius: 10px 10px 0 0;
             }
 
             #Gallery div p {
