--- a/style.css
+++ b/style.css
@@ -258,6 +258,12 @@
         padding: 0;
         text-align: center;
     }
+
+    #Offerings {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
 }
 
 /* MEDIA QUERY (large) */
