--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@
 
             #Gallery h2 {
                 padding: 0;
+                gap: none;
             }
 
             #Gallery img {
