--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@
         text-align: center;
     }
 
-    #Offerings {
+    .Artisan-Provisions, .Exclusive-Dining-Experiences, .The-Field-Feast-Monthly-Basket {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 10px;
