--- a/style.css
+++ b/style.css
@@ -136,6 +136,10 @@
                 box-shadow: 0 5px 4px #76885B;
             }
 
+            .Artisan-Provisions {
+                margin-top: 0;
+            }
+
             .The-Field-Feast-Monthly-Basket ul {
                 padding-left: 20px;
             }
@@ -263,7 +267,6 @@
     .Artisan-Provisions, .Exclusive-Dining-Experiences, .The-Field-Feast-Monthly-Basket {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
     }
 
     .The-Field-Feast-Monthly-Basket {
