--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@
 
             #Gallery h2 {
                 padding: 0;
-                gap: none;
+                gap: 0;
             }
 
             #Gallery img {
