--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@
         #Offerings {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
         }
 
             #Offerings h2, .The-Field-Feast-Monthly-Basket {
