--- a/style.css
+++ b/style.css
@@ -295,6 +295,7 @@
     .page {
         max-width: 100%;
         padding: 0;
+        margin: 0;
         text-align: center;
     }
 }
@@ -304,6 +305,7 @@
     .page {
         max-width: 100%;
         padding: 0;
+        margin: 0;
         text-align: center;
     }
 }
